--- a/MercedesBenzGreenerManufacturing.ipynb
+++ b/MercedesBenzGreenerManufacturing.ipynb
@@ -7,7 +7,7 @@
       "name": "Untitled2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN436N3ePUr9qnSVgcrXehs",
+      "authorship_tag": "ABX9TyNd46LRAbF3+sVX9nGx9swi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -969,7 +969,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0jrlXr_fQReF",
-        "outputId": "8c6972ea-dd66-46d9-b479-07a0f662e6a2"
+        "outputId": "fdd23e1a-fa20-474f-fedb-a3767f0a8a3f"
       },
       "source": [
         "\n",
@@ -978,17 +978,19 @@
         "#without parameters score was 60% so tuned it by random take .\n",
         "print(model)\n",
         "\n",
-        "model.fit(x_lable_train,y_train)\n",
-        "scores=model.score(x_lable_train,y_train)\n",
+        "model.fit(pca2_results_train,y_train)\n",
+        "scores=model.score(pca2_results_train,y_train)\n",
         "print(\"Training Score :\" ,scores )\n",
         "# evaluate model\n",
-        "cv_scores = cross_val_score(model, x_lable_train, y_train, cv=10)\n",
+        "cv_scores = cross_val_score(model, pca2_results_train, y_train, cv=5)\n",
         "\n",
         "# force scores to be positive\n",
         "#scores = absolute(scores)\n",
-        "print(\"Mean Score :\" ,cv_scores.mean() )"
+        "print(\"Mean Score :\" ,cv_scores.mean() )\n",
+        "cv_scores\n",
+        "\n"
       ],
-      "execution_count": null,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "stream",
@@ -1000,9 +1002,22 @@
             "             n_jobs=1, nthread=None, objective='reg:linear', random_state=0,\n",
             "             reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
             "             silent=None, subsample=0.7, verbosity=0)\n",
-            "Traning Score : 0.9538566320732657\n"
+            "Training Score : 0.9643803723984334\n",
+            "Mean Score : 0.3873049854642515\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.42502732, 0.30546076, 0.41912685, 0.3601005 , 0.4268095 ])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 84
         }
       ]
     },
@@ -1012,30 +1027,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "jlda_ZzhuHTb",
-        "outputId": "743d58c3-60d7-48b4-b33b-beec5cc565da"
+        "id": "Z73J8lzeeG5q",
+        "outputId": "f27829a7-75f4-42cb-ad06-59301a7dc421"
       },
       "source": [
-        "# create an xgboost regression model\n",
-        "model = XGBRegressor()\n",
-        "# create an xgboost regression model\n",
-        "model = XGBRegressor() #n_estimators=1000, max_depth=7, eta=0.1, subsample=0.7, colsample_bytree=0.8\n",
-        "\n",
-        "# define model evaluation method\n",
-        "cv = RepeatedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
-        "# evaluate model\n",
-        "scores = cross_val_score(model, x_lable_train, y_train, scoring='neg_mean_absolute_error', cv=cv, n_jobs=-1)\n",
-        "\n",
-        "# force scores to be positive\n",
-        "scores = absolute(scores)\n",
-        "print('Mean MAE: %.3f (%.3f)' % (scores.mean(), scores.std()) )"
+        "#prediction of test dataset\n",
+        "test_pred = model.predict(pca2_results_train)\n",
+        "print(y_train.mean())\n",
+        "print(test_pred.mean())"
       ],
-      "execution_count": 71,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mean MAE: 5.313 (0.295)\n"
+            "100.66931812782134\n",
+            "100.674126\n"
           ],
           "name": "stdout"
         }
@@ -1047,10 +1054,7 @@
         "id": "PY-iDkMr-g6E"
       },
       "source": [
-        "# Importing needed packages\n",
-        "\n",
-        "#Importing various models to compare\n",
-        "from sklearn.linear_model import LinearRegression\n"
+        ""
       ],
       "execution_count": 72,
       "outputs": []
@@ -1066,33 +1070,7 @@
         "outputId": "f1d14b5e-212b-4ae1-fb3a-43d14d2cd14d"
       },
       "source": [
-        "#Running various models\n",
-        "models = []\n",
-        "models.append(('LinerRegression', LinearRegression()))\n",
-        "#models.append(('KNN', KNeighborsClassifier()))\n",
-        "#models.append(('SVM', SVC()))\n",
-        "models.append(('XGB',XGBRegressor())) #eta = 0.01,gamma = 10\n",
-        "\n",
-        "import time\n",
-        "\n",
-        "# evaluate each model in turn\n",
-        "results = []\n",
-        "names = []\n",
-        "scoring = 'accuracy'\n",
-        "\n",
-        "for name, model in models:\n",
-        "    start_time = time.time()\n",
-        "    model.fit(pca2_results_train, y_train)\n",
-        "\n",
-        "    y_pred = model.predict(pca2_results_test)\n",
-        "    predictions = [round(value) for value in y_pred]\n",
-        "\n",
-        "\n",
-        "    # evaluate predictions\n",
-        "  #  accuracy = accuracy_score(y_test, predictions)\n",
-        "   # print(\"Accuracy: %.2f%%\" % (accuracy * 100.0),name)\n",
-        "    print(\"--- %s predictions ---\" +predictions)\n",
-        "    print(\"--- %s seconds ---\" % (time.time() - start_time))\n"
+        ""
       ],
       "execution_count": 73,
       "outputs": [
